--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nokia 3310",
-  "name": "Nokia 3310",
+  "short_name": "Old Phone",
+  "name": "Old Cellphone Simulator",
   "icons": [
     {
       "src": "favicon.ico",
