Changed color theme for PWA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,5 +11,5 @@
   "start_url": "/",
   "display": "fullscreen",
   "theme_color": "#000000",
-  "background_color": "#B9C38E"
+  "background_color": "#c00000"
 }
