--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^4.2.7",
+    "@types/styled-components": "^5.1.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-dev-utils": "^5.0.1",
+    "react-dom": "^17.0.2",
     "react-hammerjs": "^1.0.1",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.3",
+    "typescript": "^4.2.3",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "surge ./build -d https://old-cellphone-simulator.surge.sh"
+    "predeploy": "npm run build"
   },
   "devDependencies": {
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.3",
-    "surge": "^0.20.1"
+    "sass-loader": "^7.0.3"
   },
   "eslintConfig": {
     "extends": [
