--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^4.2.7",
     "@types/styled-components": "^5.1.9",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^17.0.2",
-    "react-hammerjs": "^1.0.1",
-    "react-redux": "^7.2.3",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hammerjs-18": "^1.0.2",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.3",
