--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.22",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/jest": "^29.5.8",
     "@types/node": "^12.20.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -23,18 +21,31 @@
     "redux": "^4.0.5",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
+    "uninstall": "^0.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "predeploy": "npm run build"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-sass": "^9.0.0",
-    "sass-loader": "^7.0.3"
+    "react-test-renderer": "^18.2.0",
+    "sass-loader": "^7.0.3",
+    "ts-jest": "^29.1.1"
   },
   "eslintConfig": {
     "extends": [
