--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^23.7.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -47,6 +48,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-hammerjs-18": "^1.0.2",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "react-refresh": "^0.11.0",
     "react-router": "^6.18.0",
