Startup screen added

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
-  "short_name": "Vapour NR1",
-  "name": "Old Cellphone Simulator",
+  "name": "Vapour NR1",
   "icons": [
     {
       "src": "favicon.ico",
