--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "predeploy": "npm run build"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
