--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "old-cellphone-simulator",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -8,7 +9,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.8",
-    "@types/node": "^12.20.7",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.16",
@@ -63,7 +64,6 @@
     "styled-components": "^5.2.3",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
-    "typescript": "^4.2.3",
     "uninstall": "^0.0.0",
     "web-vitals": "^1.1.1",
     "webpack": "^5.89.0",
@@ -79,8 +79,10 @@
     "workbox-window": "^7.0.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "dev": "vite",
+    "build": "vite build",
+    "compile": "tsc -b",
+    "preview": "vite preview",
     "test": "jest",
     "predeploy": "npm run build"
   },
@@ -94,31 +96,17 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-sass": "^9.0.0",
     "react-test-renderer": "^18.2.0",
     "sass-loader": "^13.3.2",
-    "ts-jest": "^29.1.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "jest": {
     "roots": [
@@ -170,10 +158,5 @@
       "jest-watch-typeahead/testname"
     ],
     "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
   }
 }
