--- a/package.json
+++ b/package.json
@@ -4,37 +4,23 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@reduxjs/toolkit": "^1.9.7",
-    "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.8",
     "@types/node": "^22.13.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
-    "babel-jest": "^27.4.2",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
-    "html-webpack-plugin": "^5.5.0",
     "i18next": "^23.7.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^2.2.2",
     "mini-css-extract-plugin": "^2.4.5",
@@ -63,48 +49,48 @@
     "style-loader": "^3.3.1",
     "styled-components": "^5.2.3",
     "tailwindcss": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
     "uninstall": "^0.0.0",
     "web-vitals": "^1.1.1",
-    "webpack": "^5.89.0",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "^4.0.2",
     "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
     "workbox-strategies": "^7.0.0",
-    "workbox-webpack-plugin": "^6.4.1",
     "workbox-window": "^7.0.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "compile": "tsc -b",
+    "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
     "predeploy": "npm run build"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "babel-jest": "^29.7.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-sass": "^9.0.0",
+    "prettier": "^3.5.1",
     "react-test-renderer": "^18.2.0",
+    "sass-embedded": "^1.85.0",
     "sass-loader": "^13.3.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1",
     "vite": "^6.1.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
@@ -113,7 +99,7 @@
       "<rootDir>/src"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
+      "src/**/*.{ts,tsx}",
       "!src/**/*.d.ts"
     ],
     "setupFiles": [
@@ -121,8 +107,8 @@
     ],
     "setupFilesAfterEnv": [],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+      "<rootDir>/src/**/__tests__/**/*.{ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{ts,tsx}"
     ],
     "testEnvironment": "jsdom",
     "transform": {
