--- a/package.json
+++ b/package.json
@@ -11,53 +11,22 @@
     "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.18.1",
-    "camelcase": "^6.2.1",
-    "css-loader": "^6.5.1",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
     "i18next": "^23.7.7",
-    "identity-obj-proxy": "^3.0.0",
-    "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^2.2.2",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
-    "react": "^18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-hammerjs-18": "^1.0.2",
-    "react-i18next": "^13.5.0",
+    "react-i18next": "^15.4.1",
     "react-redux": "^8.1.3",
-    "react-refresh": "^0.11.0",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
-    "redux": "^4.0.5",
-    "resolve": "^1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
-    "semver": "^7.3.5",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
+    "redux": "^5.0.1",
     "styled-components": "^5.2.3",
-    "tailwindcss": "^3.0.2",
-    "uninstall": "^0.0.0",
-    "web-vitals": "^1.1.1",
     "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-window": "^7.0.0"
+    "workbox-strategies": "^7.0.0"
   },
   "scripts": {
     "dev": "vite",
@@ -69,10 +38,6 @@
     "predeploy": "npm run build"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
@@ -82,13 +47,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "node-sass": "^9.0.0",
     "prettier": "^3.5.1",
-    "react-test-renderer": "^18.2.0",
     "sass-embedded": "^1.85.0",
-    "sass-loader": "^13.3.2",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.1.1",
