Refactor ringtone functionality and update tones component to use new hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@/*": ["./src/*"]
     }
   },
+  "files": ["src/declarations.d.ts"],
   "include": ["src"],
   "exclude": ["node_modules", "test"],
 }
